# wiki

./: .gitignore  Dockerfile  README.md  docker-compose.yml  playground_phase1.py  playground_phase2.py  playground_phase3.py  playground_phase4.py  pyproject.toml  run_mcp.py  run_mcp_http.py
.claude/: settings.json
.githooks/: pre-commit
baml_src/: generators.baml  wiki_types.baml
src/: ask.py  chunker.py  fetcher.py  generator.py  indexer.py  mcp_server.py  retriever.py
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py
